[gd_scene load_steps=4 format=3 uid="uid://cqoyfbnb1nbig"]

[ext_resource type="Script" path="res://scripts/ui/hero_button.gd" id="1_herobutton"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.85, 0.1, 0.1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fill"]
bg_color = Color(0.2, 0.6, 0.2, 0.9)

[node name="HeroButton" type="Control"]
custom_minimum_size = Vector2(90, 120)
anchors_preset = 0
offset_right = 90.0
offset_bottom = 120.0
script = ExtResource("1_herobutton")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 3

[node name="Portrait" type="ColorRect" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_vertical = 3
color = Color(0.4, 0.6, 0.8, 1)

[node name="HealthBarContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 0

[node name="HealthBar" type="ProgressBar" parent="Panel/VBoxContainer/HealthBarContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_fill")
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HeroName" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "RANGER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
